# goph419-f2023-examples

./: README.md  pyproject.toml
examples/: binary_example.py
src/goph419/: binary.py
