[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph419"
version = "0.0.1"
authors = [
    { name = "Brandon Karchewski", email = "brandon.karchewski@ucalgary.ca" },
]
description = "GOPH 419 Examples F2023"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/karcheba1/goph419-f2023-examples"
